dataset1235/2025-2/2868285114/users/2357405339/executions/2135592949_146336312.log
== SUBMISSION (2025-08-12 23:11:58)
-- CODE: 
print(16)print(round(0,666666666668))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
-- ERROR:
File "XXXX", line 1
    print(16)print(round(0,666666666668))
             ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
-- ERROR:
File "XXXX", line 1
    print(16)print(round(0,666666666668))
             ^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 23:17:11)
-- CODE: 
print(50//3)
print(50%3)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
2
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 23:09:43)
-- CODE: 
print(50/3)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16.666666666666668
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
16.666666666666668
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 23:09:56)
-- CODE: 
print(15)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
15
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
15
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 23:12:53)
-- CODE: 
print(50//3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
16
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
